--- a/b.plist
+++ b/b.plist
@@ -1,30 +1,49 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-   <key>items</key>
-   <array>
-       <dict>
-           <key>assets</key>
-           <array>
-               <dict>
-                   <key>kind</key>
-                   <string>software-package</string>
-                   <key>url</key>
-                   <string>https://www.dahaiaaa.ink/b.ipa</string>
-               </dict>
-           </array><key>metadata</key>
-           <dict>
-               <key>bundle-identifier</key>
-               <string>com.yxhy.douyou8App</string>
-               <key>bundle-version</key>
-               <string>4</string>
-               <key>kind</key>
-               <string>software</string>
-               <key>subtitle</key>
-               <string>荣耀之迹</string>
-               <key>title</key>
-               <string>我的app<span style="font-family: Arial, Helvetica, sans-serif;"></string></span>
-           </dict>
-       </dict>
-   </array>
+    <key>items</key>
+    <array>
+        <dict>
+            <key>assets</key>
+            <array>
+                <dict>
+                    <key>kind</key>
+                    <string>software-package</string>
+                    <key>url</key>
+                    <string>https://www.dahai.ink/b.ipa</string>
+                </dict>
+                <dict>
+                    <key>kind</key>
+                    <string>full-size-image</string>
+                    <key>needs-shine</key>
+                    <true/>
+                    <key>url</key>
+                    <string></string>
+                </dict>
+                <dict>
+                    <key>kind</key>
+                    <string>display-image</string>
+                    <key>needs-shine</key>
+                    <true/>
+                    <key>url</key>
+                    <string></string>
+                </dict>
+            </array>
+            <key>metadata</key>
+            <dict>
+                <key>bundle-identifier</key>
+                <string>com.yxhy.douyou8App</string>
+                <key>bundle-version</key>
+                <string>1.2.0</string>
+                <key>kind</key>
+                <string>software</string>
+                <key>subtitle</key>
+                <string>App</string>
+                <key>title</key>
+                <string>逗游吧APP</string>
+            </dict>
+        </dict>
+    </array>
 </dict>
 </plist>
